[gd_scene load_steps=6 format=2]

[ext_resource path="res://GameObject/Pickups/Core/Pickups.gd" type="Script" id=1]
[ext_resource path="res://Lib/Instanceable/BulletBehavior/BulletBehavior.tscn" type="PackedScene" id=2]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 8, 8 )

[sub_resource type="Curve" id=2]
_data = [ Vector2( 0, 1 ), 0.0, -1.0, 0, 1, Vector2( 1, 0 ), -1.0, 0.0, 1, 0 ]

[sub_resource type="Animation" id=3]
resource_name = "Collected"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("Sprite:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ false ]
}
tracks/1/type = "method"
tracks/1/path = NodePath(".")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0.5 ),
"transitions": PoolRealArray( 1 ),
"values": [ {
"args": [  ],
"method": "queue_free"
} ]
}
tracks/2/type = "value"
tracks/2/path = NodePath("CPUParticles2D:emitting")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/keys = {
"times": PoolRealArray( 0 ),
"transitions": PoolRealArray( 1 ),
"update": 1,
"values": [ true ]
}

[node name="PickupsCore" type="Node2D"]
script = ExtResource( 1 )

[node name="BulletBehavior" parent="." instance=ExtResource( 2 )]
acceleration = -120.0
gravity = 20.0
max_fall_speed = 60.0
angle_in_degrees = -90.0

[node name="Sprite" type="Sprite" parent="."]

[node name="VisibilityNotifier2D" type="VisibilityNotifier2D" parent="."]
rect = Rect2( -16, -16, 32, 32 )

[node name="Hitbox" type="Node2D" parent="."]

[node name="Area2D" type="Area2D" parent="Hitbox"]
monitorable = false
collision_layer = 8

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hitbox/Area2D"]
shape = SubResource( 1 )

[node name="CanCollectTimer" type="Timer" parent="."]
one_shot = true

[node name="CollectDelayTimer" type="Timer" parent="."]
one_shot = true

[node name="CPUParticles2D" type="CPUParticles2D" parent="."]
emitting = false
amount = 25
lifetime = 0.5
one_shot = true
explosiveness = 1.0
lifetime_randomness = 0.5
emission_shape = 1
emission_sphere_radius = 3.0
spread = 180.0
gravity = Vector2( 0, 0 )
initial_velocity = 120.0
initial_velocity_random = 1.0
linear_accel = -120.0
scale_amount = 3.0
scale_amount_random = 1.0
scale_amount_curve = SubResource( 2 )
color = Color( 0, 1, 0.0352941, 1 )
hue_variation = 0.14
hue_variation_random = 1.0

[node name="CollectAnim" type="AnimationPlayer" parent="."]
anims/Collected = SubResource( 3 )
[connection signal="tree_exiting" from="." to="." method="_on_PickupsCore_tree_exiting"]
[connection signal="screen_exited" from="VisibilityNotifier2D" to="." method="_on_VisibilityNotifier2D_screen_exited"]
[connection signal="timeout" from="CanCollectTimer" to="." method="_on_CanCollectTimer_timeout"]
[connection signal="timeout" from="CollectDelayTimer" to="." method="_on_CollectDelayTimer_timeout"]
